tools/syntax_stubs.h

typedef int64_t off_t;
#define _(s) (s)
typedef struct color_set COLORSET;
typedef struct color_scheme SCHEME;
typedef struct Hash HASH;
typedef struct Zhash ZHASH;
typedef struct jfile JFILE;
typedef struct point P;
typedef struct buffer B;
typedef struct bw BW;
typedef struct options OPTIONS;
typedef int attr_data;
struct entry {
	struct entry *next;
	const char *name;
	ptrdiff_t hash_val;
	void *val;
};
typedef struct entry HENTRY;
struct Hash {
	ptrdiff_t len;
	HENTRY **tab;
	ptrdiff_t nentries;
};
struct Zhash { char _pad[24]; };
struct jfile { char _pad[16]; };
struct color_def {
	const char *name;
	struct color_ref *refs;
	struct color_def *next;
	struct color_spec spec;
	struct color_spec orig;
	int visited;
};
struct color_set {
	COLORSET *next;
	int colors;
	HASH *syntax;
	int *palette;
	struct color_def *alldefs;
	struct color_spec *builtins;
	struct color_spec termcolors[16];
};
struct interval { int first; int last; }; /* size 8 */
struct Rtree { char _pad[248]; };
struct high_syntax {
	struct high_syntax *next;
	char *name;
	char *subr;
	struct high_param *params;
	struct high_state **states;
	HASH *ht_states;
	ptrdiff_t nstates;
	ptrdiff_t szstates;
	struct color_def *color;
	struct high_cmd default_cmd;
	struct high_frame *stack_base;
	struct high_delim_frame *delim_stack_base;
};
struct highlight_state {
	struct high_frame *stack;
	struct high_delim_frame *delim_stack;
	const int *saved_s;
	ptrdiff_t state;
};
typedef struct highlight_state HIGHLIGHT_STATE;
struct charmap {
	struct charmap *next;
	const char *name;
	int type;
	int (*is_punct)(struct charmap*,int);
	int (*is_print)(struct charmap*,int);
	int (*is_space)(struct charmap*,int);
	int (*is_alpha_)(struct charmap*,int);
	int (*is_alnum_)(struct charmap*,int);
	int (*to_lower)(struct charmap*,int);
	int (*to_upper)(struct charmap*,int);
};
struct macro { char _pad[48]; };
typedef struct macro MACRO;
struct options {
	OPTIONS *next;
	const char *ftype;
	struct options_match *match;
	int overtype;
	off_t lmargin;
	off_t rmargin;
	int autoindent;
	int wordwrap;
	int nobackup;
	off_t tab;
	int indentc;
	off_t istep;
	const char *context;
	const char *lmsg;
	const char *rmsg;
	const char *smsg;
	const char *zmsg;
	int linums;
	int hiline;
	int readonly;
	int french;
	int flowed;
	int spaces;
	int crlf;
	int highlight;
	int visiblews;
	int syntax_debug;
	const char *syntax_name;
	struct high_syntax *syntax;
	const char *map_name;
	struct charmap *charmap;
	const char *language;
	int smarthome;
	int indentfirst;
	int smartbacks;
	int purify;
	int picture;
	int highlighter_context;
	int single_quoted;
	int no_double_quoted;
	int c_comment;
	int cpp_comment;
	int hash_comment;
	int vhdl_comment;
	int semi_comment;
	int tex_comment;
	int hex;
	int viewmode;
	int ansi;
	int title;
	const char *text_delimiters;
	const char *cpara;
	const char *cnotpara;
	MACRO *mnew;
	MACRO *mold;
	MACRO *msnew;
	MACRO *msold;
	MACRO *mfirst;
};
struct point {
	void *link_next;
	void *link_prev;
	B *b;
	char _pad[112 - 24];
};
struct buffer {
	char _pad0[192];
	OPTIONS o;
	char _pad1[632 - 192 - 344];
};
struct bw {
	char _pad0[24];
	P *cursor;
	char _pad1[488 - 32];
};
extern char i_msg[];
extern struct color_set *curschemeset;
const char *my_gettext(const char *s);
void internal_msg(const char *s);
void setlogerrs(void);
void *joe_malloc(ptrdiff_t n);
void *joe_realloc(void *p, ptrdiff_t n);
void *joe_calloc(ptrdiff_t n, ptrdiff_t sz);
void joe_free(void *p);
char *zdup(const char *s);
char *zlcpy(char *a, ptrdiff_t siz, const char *b);
char *zlcat(char *a, ptrdiff_t siz, const char *b);
void vsrm(char *v);
HASH *htmk(ptrdiff_t len);
void *htadd(HASH *ht, const char *name, void *val);
void *htfind(HASH *ht, const char *name);
void htrm(HASH *ht);
const char *atom_add(const char *name);
ZHASH *Zhtmk(ptrdiff_t len);
void *Zhtadd(ZHASH *ht, const int *name, void *val);
void *Zhtfind(ZHASH *ht, const int *name);
const int *Zatom_add(const int *name);
int Zcmp(const int *a, const int *b);
int *Zdup(const int *s);
char *jfgets(char *buf, int len, JFILE *f);
int jfclose(JFILE *f);
char *open_config_file(JFILE **result, const char *prefix, const char *name, const char *suffix);
int parse_ws(const char **p, int cmt);
int parse_ident(const char **p, char *buf, ptrdiff_t len);
int parse_char(const char **p, char c);
int parse_tows(const char **p, char *buf);
int parse_field(const char **p, const char *field);
int parse_diff(const char **p, ptrdiff_t *buf);
ptrdiff_t parse_Zstring(const char **p, int *buf, ptrdiff_t len);
int parse_class(const char **p, struct interval **array, ptrdiff_t *size);
int parse_color_def(const char **p, struct color_def *dest);
void resolve_syntax_colors(COLORSET *cset, struct high_syntax *syntax);
int pgetc(P *p);
P *binss(P *p, const char *s);
P *pnextl(P *p);
int to_uni(struct charmap *cset, int c);
int *lowerize(int *d, ptrdiff_t len, const int *s);
void rtree_init(struct Rtree *r);
void *rtree_lookup(struct Rtree *r, int ch);
void rtree_opt(struct Rtree *r);
void rtree_set(struct Rtree *r, struct interval *array, ptrdiff_t len, void *map);
void rtree_show(struct Rtree *r);