src/syntax.zig


pub const struct_entry = extern struct {
    next: [*c]struct_entry = null,
    name: [*c]const u8 = null,
    hash_val: ptrdiff_t = 0,
    val: ?*anyopaque = null,
};
pub const HENTRY = struct_entry;
pub const struct_Hash = extern struct {
    len: ptrdiff_t = 0,
    tab: [*c][*c]HENTRY = null,
    nentries: ptrdiff_t = 0,
};
pub const HASH = struct_Hash;
pub const struct_color_ref = extern struct {
    name: [*c]const u8 = null,
    next: [*c]struct_color_ref = null,
};
pub const struct_color_spec = extern struct {
    @"type": c_int = 0,
    atr: c_int = 0,
    mask: c_int = 0,
    gui_fg: c_int = 0,
    gui_bg: c_int = 0,
};
pub const struct_color_def = extern struct {
    name: [*c]const u8 = null,
    refs: [*c]struct_color_ref = null,
    next: [*c]struct_color_def = null,
    spec: struct_color_spec = std.mem.zeroes(struct_color_spec),
    orig: struct_color_spec = std.mem.zeroes(struct_color_spec),
    visited: c_int = 0,
};
pub const COLORSET = struct_color_set;
pub const struct_color_set = extern struct {
    next: [*c]COLORSET = null,
    colors: c_int = 0,
    syntax: [*c]HASH = null,
    palette: [*c]c_int = null,
    alldefs: [*c]struct_color_def = null,
    builtins: [*c]struct_color_spec = null,
    termcolors: [16]struct_color_spec = std.mem.zeroes([16]struct_color_spec),
};
pub const struct_color_scheme = opaque {};
pub const SCHEME = struct_color_scheme;
pub const struct_Zhash = extern struct {
    _pad: [24]u8 = std.mem.zeroes([24]u8),
};
pub const ZHASH = struct_Zhash;
pub const struct_jfile = extern struct {
    _pad: [16]u8 = std.mem.zeroes([16]u8),
};
pub const JFILE = struct_jfile;
pub const struct_options_match = extern struct {
    _pad: [32]u8 = std.mem.zeroes([32]u8),
};
pub const struct_high_param = extern struct {
    next: [*c]struct_high_param = null,
    name: [*c]u8 = null,
};
pub const struct_Rtree = extern struct {
    _pad: [248]u8 = std.mem.zeroes([248]u8),
};
pub const struct_high_cmd = extern struct {
    flags: c_uint = 0,
    recolor: ptrdiff_t = 0,
    new_state: [*c]struct_high_state = null,
    keywords: [*c]ZHASH = null,
    delim: [*c]struct_high_cmd = null,
    call: [*c]struct_high_syntax = null,
};
pub const struct_high_state = extern struct {
    no: ptrdiff_t = 0,
    name: c_int = 0,
    color: c_int = 0,
    colorp: [*c]struct_color_def = null,
    rtree: struct_Rtree = std.mem.zeroes(struct_Rtree),
    dflt: [*c]struct_high_cmd = null,
    same_delim: [*c]struct_high_cmd = null,
    delim: [*c]struct_high_cmd = null,
};
pub const struct_high_frame = extern struct {
    parent: [*c]struct_high_frame = null,
    child: [*c]struct_high_frame = null,
    sibling: [*c]struct_high_frame = null,
    syntax: [*c]struct_high_syntax = null,
    return_state: [*c]struct_high_state = null,
};
pub const struct_high_delim_frame = extern struct {
    parent: [*c]struct_high_delim_frame = null,
    child: [*c]struct_high_delim_frame = null,
    sibling: [*c]struct_high_delim_frame = null,
    saved_s: [*c]const c_int = null,
};
pub const struct_high_syntax = extern struct {
    next: [*c]struct_high_syntax = null,
    name: [*c]u8 = null,
    subr: [*c]u8 = null,
    params: [*c]struct_high_param = null,
    states: [*c][*c]struct_high_state = null,
    ht_states: [*c]HASH = null,
    nstates: ptrdiff_t = 0,
    szstates: ptrdiff_t = 0,
    color: [*c]struct_color_def = null,
    default_cmd: struct_high_cmd = std.mem.zeroes(struct_high_cmd),
    stack_base: [*c]struct_high_frame = null,
    delim_stack_base: [*c]struct_high_delim_frame = null,
};
pub const struct_charmap = extern struct {
    next: [*c]struct_charmap = null,
    name: [*c]const u8 = null,
    @"type": c_int = 0,
    is_punct: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_print: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_space: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_alpha_: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_alnum_: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    to_lower: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    to_upper: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
};
pub const struct_macro = extern struct {
    _pad: [48]u8 = std.mem.zeroes([48]u8),
};
pub const MACRO = struct_macro;
pub const struct_options = extern struct {
    next: [*c]OPTIONS = null,
    ftype: [*c]const u8 = null,
    match: [*c]struct_options_match = null,
    overtype: c_int = 0,
    lmargin: off_t = 0,
    rmargin: off_t = 0,
    autoindent: c_int = 0,
    wordwrap: c_int = 0,
    nobackup: c_int = 0,
    tab: off_t = 0,
    indentc: c_int = 0,
    istep: off_t = 0,
    context: [*c]const u8 = null,
    lmsg: [*c]const u8 = null,
    rmsg: [*c]const u8 = null,
    smsg: [*c]const u8 = null,
    zmsg: [*c]const u8 = null,
    linums: c_int = 0,
    hiline: c_int = 0,
    readonly: c_int = 0,
    french: c_int = 0,
    flowed: c_int = 0,
    spaces: c_int = 0,
    crlf: c_int = 0,
    highlight: c_int = 0,
    visiblews: c_int = 0,
    syntax_debug: c_int = 0,
    syntax_name: [*c]const u8 = null,
    syntax: [*c]struct_high_syntax = null,
    map_name: [*c]const u8 = null,
    charmap: [*c]struct_charmap = null,
    language: [*c]const u8 = null,
    smarthome: c_int = 0,
    indentfirst: c_int = 0,
    smartbacks: c_int = 0,
    purify: c_int = 0,
    picture: c_int = 0,
    highlighter_context: c_int = 0,
    single_quoted: c_int = 0,
    no_double_quoted: c_int = 0,
    c_comment: c_int = 0,
    cpp_comment: c_int = 0,
    hash_comment: c_int = 0,
    vhdl_comment: c_int = 0,
    semi_comment: c_int = 0,
    tex_comment: c_int = 0,
    hex: c_int = 0,
    viewmode: c_int = 0,
    ansi: c_int = 0,
    title: c_int = 0,
    text_delimiters: [*c]const u8 = null,
    cpara: [*c]const u8 = null,
    cnotpara: [*c]const u8 = null,
    mnew: [*c]MACRO = null,
    mold: [*c]MACRO = null,
    msnew: [*c]MACRO = null,
    msold: [*c]MACRO = null,
    mfirst: [*c]MACRO = null,
};
pub const OPTIONS = struct_options;
pub const struct_buffer = extern struct {
    _pad0: [192]u8 = std.mem.zeroes([192]u8),
    o: OPTIONS = std.mem.zeroes(OPTIONS),
    _pad1: [96]u8 = std.mem.zeroes([96]u8),
};
pub const B = struct_buffer;
pub const struct_point = extern struct {
    link_next: ?*anyopaque = null,
    link_prev: ?*anyopaque = null,
    b: [*c]B = null,
    _pad: [88]u8 = std.mem.zeroes([88]u8),
};
pub const P = struct_point;
pub const struct_bw = extern struct {
    _pad0: [24]u8 = std.mem.zeroes([24]u8),
    cursor: [*c]P = null,
    _pad1: [456]u8 = std.mem.zeroes([456]u8),
};
pub const BW = struct_bw;
pub const attr_data = c_int;
pub const struct_interval = extern struct {
    first: c_int = 0,
    last: c_int = 0,
};
pub const struct_highlight_state = extern struct {
    stack: [*c]struct_high_frame = null,
    delim_stack: [*c]struct_high_delim_frame = null,
    saved_s: [*c]const c_int = null,
    state: ptrdiff_t = 0,
};
pub const HIGHLIGHT_STATE = struct_highlight_state;
pub const struct_state_debug_data = extern struct {
    name: c_int = 0,
    recolor: c_int = 0,
};
pub const i_msg: [*c]u8 = @extern([*c]u8, .{
    .name = "i_msg",
});
pub extern var curschemeset: [*c]struct_color_set;
pub extern fn my_gettext(s: [*c]const u8) [*c]const u8;
pub extern fn internal_msg(s: [*c]const u8) void;
pub extern fn setlogerrs() void;
pub extern fn joe_malloc(n: ptrdiff_t) ?*anyopaque;
pub extern fn joe_realloc(p: ?*anyopaque, n: ptrdiff_t) ?*anyopaque;
pub extern fn joe_calloc(n: ptrdiff_t, sz: ptrdiff_t) ?*anyopaque;
pub extern fn joe_free(p: ?*anyopaque) void;
pub extern fn zdup(s: [*c]const u8) [*c]u8;
pub extern fn zlcpy(a: [*c]u8, siz: ptrdiff_t, b: [*c]const u8) [*c]u8;
pub extern fn zlcat(a: [*c]u8, siz: ptrdiff_t, b: [*c]const u8) [*c]u8;
pub extern fn vsrm(v: [*c]u8) void;
pub extern fn htmk(len: ptrdiff_t) [*c]HASH;
pub extern fn htadd(ht: [*c]HASH, name: [*c]const u8, val: ?*anyopaque) ?*anyopaque;
pub extern fn htfind(ht: [*c]HASH, name: [*c]const u8) ?*anyopaque;
pub extern fn htrm(ht: [*c]HASH) void;
pub extern fn atom_add(name: [*c]const u8) [*c]const u8;
pub extern fn Zhtmk(len: ptrdiff_t) [*c]ZHASH;
pub extern fn Zhtadd(ht: [*c]ZHASH, name: [*c]const c_int, val: ?*anyopaque) ?*anyopaque;
pub extern fn Zhtfind(ht: [*c]ZHASH, name: [*c]const c_int) ?*anyopaque;
pub extern fn Zatom_add(name: [*c]const c_int) [*c]const c_int;
pub extern fn Zcmp(a: [*c]const c_int, b: [*c]const c_int) c_int;
pub extern fn Zdup(s: [*c]const c_int) [*c]c_int;
pub extern fn jfgets(buf: [*c]u8, len: c_int, f: [*c]JFILE) [*c]u8;
pub extern fn jfclose(f: [*c]JFILE) c_int;
pub extern fn open_config_file(result: [*c][*c]JFILE, prefix: [*c]const u8, name: [*c]const u8, suffix: [*c]const u8) [*c]u8;
pub extern fn parse_ws(p: [*c][*c]const u8, cmt: c_int) c_int;
pub extern fn parse_ident(p: [*c][*c]const u8, buf: [*c]u8, len: ptrdiff_t) c_int;
pub extern fn parse_char(p: [*c][*c]const u8, c: u8) c_int;
pub extern fn parse_tows(p: [*c][*c]const u8, buf: [*c]u8) c_int;
pub extern fn parse_field(p: [*c][*c]const u8, field: [*c]const u8) c_int;
pub extern fn parse_diff(p: [*c][*c]const u8, buf: [*c]ptrdiff_t) c_int;
pub extern fn parse_Zstring(p: [*c][*c]const u8, buf: [*c]c_int, len: ptrdiff_t) ptrdiff_t;
pub extern fn parse_class(p: [*c][*c]const u8, array: [*c][*c]struct_interval, size: [*c]ptrdiff_t) c_int;
pub extern fn parse_color_def(p: [*c][*c]const u8, dest: [*c]struct_color_def) c_int;
pub extern fn resolve_syntax_colors(cset: [*c]COLORSET, syntax: [*c]struct_high_syntax) void;
pub extern fn pgetc(p: [*c]P) c_int;
pub extern fn binss(p: [*c]P, s: [*c]const u8) [*c]P;
pub extern fn pnextl(p: [*c]P) [*c]P;
pub extern fn to_uni(cset: [*c]struct_charmap, c: c_int) c_int;
pub extern fn lowerize(d: [*c]c_int, len: ptrdiff_t, s: [*c]const c_int) [*c]c_int;
pub extern fn rtree_init(r: [*c]struct_Rtree) void;
pub extern fn rtree_lookup(r: [*c]struct_Rtree, ch: c_int) ?*anyopaque;
pub extern fn rtree_opt(r: [*c]struct_Rtree) void;
pub extern fn rtree_set(r: [*c]struct_Rtree, array: [*c]struct_interval, len: ptrdiff_t, map: ?*anyopaque) void;
pub extern fn rtree_show(r: [*c]struct_Rtree) void;
pub export var attr_buf: [*c]attr_data = null;
pub export var syndebug_buf: [*c]struct_state_debug_data = null;
pub export var attr_size: c_int = 0;
pub export var stack_count: c_int = 0;
pub export var delim_stack_count: c_int = 0;
pub var state_count: c_int = 0;
pub export var ansi_syntax: [*c]struct_high_syntax = null;
pub export var syntax_list: [*c]struct_high_syntax = null;
pub export var state_names: [*c][*c]const u8 = null;
pub var num_state_names: c_int = 0;
pub var alloc_state_names: c_int = 0;
pub fn check_alloc_attr_bufs(arg_attrp: [*c][*c]attr_data, arg_attr_endp: [*c][*c]attr_data, arg_syndebugp: [*c][*c]struct_state_debug_data) callconv(.c) void {
    var attrp = arg_attrp;
    _ = &attrp;
    var attr_endp = arg_attr_endp;
    _ = &attr_endp;
    var syndebugp = arg_syndebugp;
    _ = &syndebugp;
    if (!(attr_buf != null)) {
        attr_size = 1024;
        attr_buf = @ptrCast(@alignCast(joe_malloc(@as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(@sizeOf(attr_data))))) * @as(ptrdiff_t, attr_size))));
    }
    attrp.* = attr_buf;
    attr_endp.* = attr_buf + @as(usize, @bitCast(@as(isize, @intCast(attr_size))));
    if (!(syndebugp != null)) {
        joe_free(@ptrCast(@alignCast(syndebug_buf)));
        syndebug_buf = null;
    } else if (!(syndebug_buf != null)) {
        syndebug_buf = @ptrCast(@alignCast(joe_malloc(@as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(@sizeOf(struct_state_debug_data))))) * @as(ptrdiff_t, attr_size))));
    }
    if (syndebugp != null) {
        syndebugp.* = syndebug_buf;
    }
}
